# chinese_pinyin_ime

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.en.md  README.md  pinyin.h  trie.h
data/: raw_dict_utf8.txt
example/: CMakeLists.txt  Makefile  example.cpp  example_shared  example_static
include/: candidates.h  dict.h  dict_item.h  ime.h  pinyin.h  query.h  trie.h
source/: candidates.cpp  dict.cpp  dict_item.cpp  ime.cpp  pinyin.cpp  query.cpp
test/: Makefile  test.cpp
